# JODO

./: Cargo.toml  README.md  README_CN.md  README_EN.md  README_FZH.md  README_JA.md  debian_install.sh  install.sh
.github/workflows/: release.yml
src/: main.rs  ui.rs
