[package]
name = "jodo"
version = "1.2.1"
edition = "2021" 
description = "一个简单的命令行Todo应用"
authors = ["Joyin"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.0"
